# hiera-gc

./: .gitignore  .gitreview  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
hiera_gc/: allowlist.py  analysis.py  checks.py  classify.py  cli.py  config.py  filecache.py  fix.py  hiera_config.py  inventory.py  redundancy.py  report.py  scope.py  yamlloc.py
hiera_gc/consumers/: data_interp.py  epp.py  erb.py  index.py  model.py  pp_classes.py  pp_lookups.py  pp_tokens.py  ruby_plugins.py
scripts/: hiera-gc-autofix.allowlist.example  hiera-gc-autofix.conf.example  hiera-gc-autofix.sh
src/hiera_gc/: __main__.py  analysis.py  classify.py  cli.py  config.py  filecache.py  fix.py  hiera_config.py  inventory.py  report.py  scope.py  yamlloc.py
src/hiera_gc/consumers/: data_interp.py  epp.py  pp_classes.py  pp_lookups.py  ruby_plugins.py
tests/: autofix_smoke.sh  test_checks.py  test_classify.py  test_cli_smoke.py  test_config.py  test_data_interp.py  test_e2e.py  test_env_restriction.py  test_fix.py  test_hiera_config.py  test_inventory.py  test_pp_classes.py  test_pp_lookups.py  test_pp_tokens.py  test_redundancy.py  test_templates.py  test_yamlloc.py
