[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hiera-gc"
version = "0.1.0"
description = "Find unused, redundant and orphaned Hiera data in a Puppet code tree"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{name = "ARDC Nectar"}]
dependencies = [
    "PyYAML",
]

[project.scripts]
hiera-gc = "hiera_gc.cli:main"

[tool.setuptools.packages.find]
include = ["hiera_gc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
